# FreelyMovingVR4Mice

./: .buildinfo  .env.test.local.example  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  310zebra.mat  400zebra.mat  Assembly-CSharp.csproj  AugmentedReality.sln  L_occ.prefab  README.html  README.md  Target_spawner.cs  Unity.ML-Agents.Editor.csproj  Unity.ML-Agents.csproj  _config.yml  _toc.yml  ball_black.prefab  ball_white.prefab  ball_zebra.prefab  config_path.json  environment.yml  exclude-spell-check.txt  exclude_spell_check.txt  genindex.html  gitignore  ignore_list.txt  index.html  middle occluder.prefab  mouse_VisualDiscrim_single_teardrop_blocks [Tom legacy version].py  mouse_VisualDiscrim_single_teardrop_blocks.py  objects.inv  photodidode.npy  rename.sh  search.html  searchindex.js  setup.cfg  setup.py  task_config_demo.json  (+2 more)
AugmentedReality/: .gitignore  mono_crash.0.0.json  mono_crash.c04ee3bf2.0.json
Blender_objects/: AR_game_obejcts.blend  README.md  main.py
_sources/: README.md
audio/: analyse_audio.py
dev/: setup.cfg
dj_pipeline/: .env-aws.example  .env.compose.example  .env.compose.testonly  .env.example  .gitignore  Dockerfile  Makefile  README.md  cron_scenario.py  cron_script.sh  cron_script_aws.sh  cron_script_reboot.sh  cron_session_metrics.py  datajoint.json  docker-compose.test.yml  docker-compose.yml  env.py  export_restricted_dump.sh  get_erd.ipynb  quick_start.sh  requirements-dev.txt  requirements-docker.txt  run.py  script_populate_celia.py  test.py  vr4mice-erd
dj_pipeline/base/base_actions/: Makefile  setup.cfg
dj_pipeline/base/base_actions/base_actions/: connect.py  send_email.py
dj_pipeline/base/base_actions/base_actions/utils/: logger.py  login.py  schema_config.py
docs/: Building_the_cage.md  DLCUnity.html  DLCUnity.md  DeveloperGuide.md  Parts_list.md  Unity_Game.html  Unity_Game.md  UseOverviewGuide.html  UseOverviewGuide.md  VisualDiscrim.html  VisualDiscrim.md  building_the_box.md  create_desktop_icon.md  developer_guide.html  developer_guide.md  dlc_processor.html  dlc_processor.md  docker_testing.md  figures.html  figures.md  installSumUp.md  paper.html  paper.md  user_guide.md  vr4mice_overview.html  vr4mice_overview.md
mouse_task/: __init__.py  _registry.py  far_reward_mouse_detection_p2.py  helpers.py  inv_mouse_detection_p1.py  inv_mouse_discrim.py  inv_shape_mouse_discrim.py  inv_shape_mouse_discrim_multioccluders.py  inv_shape_mouse_discrim_narrow_occluders.py  inv_shape_mouse_discrim_occluders.py  kfilter.py  manual_water.py  mouse_Randpross.py  mouse_VD_detection_p1.py  mouse_VD_detection_p2.py  mouse_VD_discrim_occluders.py  mouse_VD_discrimination.py  mouse_VisualDiscim_socket_copy.py  mouse_VisualDiscrim_camera.py  mouse_VisualDiscrim_demo_task.py  mouse_VisualDiscrim_random_occluders.py  mouse_VisualDiscrim_single_teardrop_blocks.py  mouse_VisualDiscrim_socket.py  mouse_VisualDiscrim_socket_bak.py  mouse_VisualDiscrim_socket_thread.py  mouse_VisualDiscrim_socket_thread_blocks.py  mouse_ar_task.py  mouse_detection_p1.py  mouse_detection_p1_inv.py  mouse_detection_p2.py  mouse_detection_p2_inv.py  mouse_discrim.py  mouse_discrim_inv.py  mouse_discrim_multioccluders.py  mouse_discrim_multioccluders_inv.py  mouse_discrim_occluders.py  mouse_discrim_occluders_inv.py  mouse_manual_water.py  mouse_random_actions.py  mouse_shape_detection_p1.py  (+9 more)
rl_task/: .gitignore  Dockerfile  EXPERIMENTS.md  Makefile  PPO_trainer.py  README.md  RecurrentPPO_trainer.py  TEMP.md  __init__.py  docker-compose.yaml  docker-compose.yml  fake_teensy.py  inference.py  requirements.txt  rl_task_active_sensing.py  rl_task_gym_wrapper.py  rl_task_train.py  (+2 more)
(+704 files in other folders)
