# setup.cfg

[metadata]
name = vr4mice
version = 0.0.1
author = M. Mathis Lab Members
author_email = mathis@rowland.harvard.edu
description = Tasks and GUI to run experiments controlled by Teensy & Arduino microcontrollers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MMathisLab/FreelyMovingVR4Mice

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
where =
    - teensyexp
python_requires = >=3.5, <3.11
install_requires =
    mlagents_envs==0.14.0
    numpy>=1.21.6
    opencv_python_headless>=4.6.0.66
    pyserial>=3.5
    opencv_python==4.6.0.66
    pandas==1.5.1
    torch==1.13.0
    deeplabcut==2.2.3
    deeplabcut-live==1.0.2 

[options.extras_require]
docs =
    numpydoc
    jupyter-book
    ghp-import
deeplabcut =
    deeplabcut[tf]

[options.packages.find]
exclude = []

[bdist_wheel]
universal=1

[options.entry_points]
console_scripts =
    vr4mice=teensyexp.teensy_experiment:main
