# setup.cfg

[metadata]
name = vr4mice
version = 0.0.1
author = M. Mathis Lab Members
author_email = mathis@rowland.harvard.edu
description = Tasks and GUI to run experiments controlled by Teensy & Arduino microcontrollers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MMathisLab/FreelyMovingVR4Mice
python_requires = >=3.5, <3.11
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_data = teensyexp = cfg/*
include_package_data = True
install_requires =
    numpy>=1.16.0
    ruamel.yaml>=0.15.0
    pyserial
    mlagents-envs==0.14.0
    opencv-python

[options.extras_require]
docs =
    numpydoc
    jupyter-book
    ghp-import
deeplabcut =
    deeplabcut[tf]

[options.entry_points]
console_scripts =
    vr4mice = teensyexp:main
