[metadata]
name = base_actions 
version = 1.0.0
author = M.W. Mathis Lab
description = Mathislab base actions
long_description = file: README.md
long_description_content_type = text/x-markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
where = 
    - .
    - tests
python_requires = >=3.8
install_requires =
    datajoint==0.12.5b1

[options.extras_require]
dev =
    toml
    pytest

[options.packages.find]
exclude = []

[bdist_wheel]
universal=1
